Reorganizar estrutura de diretórios

--- a/pages/login.html
+++ b/pages/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - PrimeFit</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="login.js" defer></script>
+    <link rel="stylesheet" href="../styles/main.css">
+    <script src="../scripts/login.js" defer></script>    
 </head>
 
 <body>
