--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
             <div class="header-login">
                 <ul id="loginLinks">
                     <li id="userWelcome" class="hide">Olá, <span id="usernameDisplay"></span>!</li>
-                    <li id="accountLink" class="hide"><a href="#">Minha Conta</a></li>
+                    <li id="accountLink" class="hide"><a href="account.html">Minha Conta</a></li>
                     <li id="logoutLink" class="hide"><a href="#">Sair</a></li>
                     <li id="loginLink"><a href="login.html">Entrar</a></li>
                     <li id="registerLink"><a href="register.html">Registrar</a></li>
@@ -42,7 +42,7 @@
         </section>
         <section id="classes">
             <h2>Aulas Experimentais</h2>
-            <!-- Agendamento de aulas -->
+            <p>Agendamento de aula</p>
         </section>
         <section id="account" class="hide">
             <h2>Minha Conta</h2>
