Adicionar funcionalidade de escolha de plano

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <title>PrimeFit</title>
     <link rel="stylesheet" href="../styles/main.css">
     <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/planManager.js" defer></script>
 </head>
 <body>
     <header>
