--- a/pages/index.html
+++ b/pages/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrimeFit</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/index.js" defer></script>
     <script src="../scripts/planManager.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
 </head>
 <body>
     <header>
