--- a/pages/account.html
+++ b/pages/account.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Conta - PrimeFit</title>
-    <link rel="stylesheet" href="../styles/main.css"> <!-- CSS geral -->
-    <link rel="stylesheet" href="../styles/account.css"> <!-- CSS específico para esta página -->
+    <link rel="stylesheet" href="../styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js" defer></script>
     <script src="../scripts/account.js" defer></script>
 </head>
@@ -20,19 +19,8 @@
             <nav class="nav-main">
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Aulas Experimentais</a></li>
                 </ul>
-            </nav>
-            <div class="header-login">
-                <ul id="loginLinks">
-                    <li id="userWelcome" class="hide">Olá, <span id="usernameDisplay"></span>!</li>
-                    <li id="accountLink" class="hide"><a href="account.html">Minha Conta</a></li>
-                    <li id="logoutLink" class="hide"><a href="#">Sair</a></li>
-                    <li id="loginLink"><a href="login.html">Entrar</a></li>
-                    <li id="registerLink"><a href="register.html">Registrar</a></li>
-                </ul>
-            </div>
+        </div>
         </div>
     </header>
     <main>
@@ -47,9 +35,6 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 PrimeFit. Todos os direitos reservados.</p>
-    </footer>
 </body>
 
 </html>
