--- a/pages/index.html
+++ b/pages/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrimeFit</title>
     <link rel="stylesheet" href="../styles/main.css">
     <script src="../scripts/index.js" defer></script>
-    <script src="../scripts/planManager.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
 </head>
+
 <body>
     <header>
         <div class="header-content">
@@ -35,24 +36,22 @@
     </header>
     <main>
         <section id="home">
+            <br><br><br><br><br><br><br>
             <h2>Sobre nós</h2>
-            <p>Informações sobre a academia.</p>
+            <p>Na PrimeFit, você encontra uma academia totalmente equipada com os melhores equipamentos e uma ampla gama de aulas e programas para atender a todas as suas necessidades de fitness. Nosso objetivo é proporcionar uma experiência de treino excepcional, com suporte contínuo de profissionais qualificados e um ambiente acolhedor. Venha descobrir como podemos ajudar você a alcançar suas metas de saúde e bem-estar com eficiência e motivação.
+            </p>
         </section>
         <section id="plans">
             <h2>Planos de Assinatura</h2>
-            <!-- Os planos serão carregados aqui -->
         </section>
         <section id="classes">
             <h2>Aulas Experimentais</h2>
-            <p>Agendamento de aula</p>
+            <p>Em breve...</p>
         </section>
         <section id="account" class="hide">
             <h2>Minha Conta</h2>
-            <!-- Gerenciamento de conta -->
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 PrimeFit. Todos os direitos reservados.</p>
-    </footer>
 </body>
+
 </html>
