Melhorar estrutura e estilos de HTML e CSS

--- a/pages/index.html
+++ b/pages/index.html
@@ -60,15 +60,15 @@
           <ul class="u-nav u-unstyled u-nav-1">
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./"
-                style="padding: 10px 20px;">Página Inicial</a>
+                style="padding: 10px 20px;">Início</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Sobre.html" style="padding: 10px 20px;">Sobre</a>
+                href="#" style="padding: 10px 20px;">Planos</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="Contato.html" style="padding: 10px 20px;">Contato</a>
+                href="#" style="padding: 10px 20px;">Instagram</a>
             </li>
           </ul>
         </div>
@@ -94,28 +94,18 @@
   <section
     class="skrollable skrollable-between u-align-center u-clearfix u-container-align-center u-image u-shading u-section-1"
     src="" id="carousel_fb2b" data-image-width="1980" data-image-height="1320">
+    <br><br><br><br><br><br><br><br><br><br>
     <div class="u-clearfix u-sheet u-sheet-1">
-      <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1750"
-        data-animation-delay="500">Transform Yourself&nbsp;<br>
-      </h1>
-      <p class="u-align-center u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500">
-        We recruit the smartest, most educated coaches who utilize state-of-the-art equipment and forward thinking
-        methodologies. We coach rather than train. </p>
-      <p class="u-align-center u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000"
-        data-animation-delay="500">Images from <a href="https://www.freepik.com/photos/fit-girl"
-          class="u-active-none u-border-1 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-1"
-          target="_blank">Freepik</a>
-      </p>
       <a href="#"
         class="u-active-palette-2-base u-align-center u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-2-base u-btn u-button-style u-hover-palette-2-base u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2"
-        data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">View All
-        Classes</a>
+        data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Ver todos os
+        planos</a>
     </div>
   </section>
   <section class="u-align-center u-black u-clearfix u-container-align-center u-section-3" id="carousel_75f1">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn"
-        data-animation-duration="1500"> Classes&nbsp;for all levels</h2>
+        data-animation-duration="1500"> Treinos&nbsp;para todos os níveis</h2>
       <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div
@@ -135,8 +125,8 @@
               <p class="u-text u-text-3"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-1">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-1">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -156,8 +146,8 @@
               <p class="u-text u-text-5"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -177,8 +167,8 @@
               <p class="u-text u-text-7"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-3">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-3">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -198,8 +188,8 @@
               <p class="u-text u-text-9"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-4">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-4">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -219,8 +209,8 @@
               <p class="u-text u-text-11"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-5">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-5">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -240,8 +230,8 @@
               <p class="u-text u-text-13"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-6">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-6">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -261,8 +251,8 @@
               <p class="u-text u-text-15"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-7">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-7">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -282,8 +272,8 @@
               <p class="u-text u-text-17"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-8">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-8">Assinar
+                plano</a>
             </div>
           </div>
           <div
@@ -303,17 +293,12 @@
               <p class="u-text u-text-19"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
-                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-9">Learn
-                more</a>
+                class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-9">Assinar
+                plano</a>
             </div>
           </div>
         </div>
       </div>
-      <p class="u-align-center u-text u-text-default u-text-20">Image from <a
-          href="https://www.freepik.com/photos/people"
-          class="u-border-1 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-10"
-          target="_blank">Freepik</a>
-      </p>
     </div>
   </section>
 
@@ -324,29 +309,22 @@
       <span class="u-file-icon u-icon u-text-palette-2-base u-icon-1" data-animation-name="customAnimationIn"
         data-animation-duration="1000"><img src="../images/1077093-751aeb25.png" alt=""></span>
       <h2 class="u-text u-text-1" data-animation-name="slideIn" data-animation-duration="2000"
-        data-animation-direction="Left"> See more, follow us on</h2>
+        data-animation-direction="Left">Segue a gente!</h2>
       <h3 class="u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn"
-        data-animation-duration="1500"> Instagram <a href="#"
+        data-animation-duration="1500"> Instagram <a href="https://www.instagram.com/sejaprimefit"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-white u-text-hover-white u-text-palette-2-base u-btn-1"
-          target="_blank">@amazingsportclub</a>
+          target="_blank">@sejaprimefitb</a>
       </h3>
-      <p class="u-text u-text-body-alt-color u-text-default u-text-3" data-animation-name="customAnimationIn"
-        data-animation-duration="1500" data-animation-delay="500">Image from <a
-          href="https://www.freepik.com/photos/kick-boxing"
-          class="u-active-none u-border-1 u-border-active-palette-3-base u-border-hover-palette-3-base u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-btn-2"
-          target="_blank">Freepik</a>
-      </p>
-    </div>
-  </section>
-    <div class="u-clearfix u-sheet u-sheet-1"></div>
-  </section>
-  <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="sec-0673">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-small-text u-text u-text-variant u-text-1">Texto de Amostra. Clique para selecionar o Elemento de
-        Texto.</p>
-    </div>
-  </footer>
 
+    </div>
+  </section>
+  <div class="u-clearfix u-sheet u-sheet-1"></div>
+  </section>
+  <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80" id="sec-0673">
+    <p class="u-small-text u-text u-text-variant u-text-1">
+      © 2024 Prime Fit. Todos os direitos reservados.
+    </p>
+  </footer>
 
 </body>
 
