Integrar API com o novo layout

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,10 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
+<!-- <section id="plans">
+  <h2>Planos de Assinatura</h2>
+</section> -->
+
 <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./"
   data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
   <header class="u-clearfix u-header u-header" id="sec-2d01">
@@ -57,15 +61,6 @@
           </a>
         </div>
         <div class="u-nav-container">
-
-          <!-- <ul id="loginLinks">
-            <li id="userWelcome" class="hide">Olá, <span id="usernameDisplay"></span>!</li>
-            <li id="accountLink" class="hide"><a href="account.html">Minha Conta</a></li>
-            <li id="logoutLink" class="hide"><a href="#">Sair</a></li>
-            <li id="loginLink"><a href="login.html">Entrar</a></li>
-            <li id="registerLink"><a href="register.html">Registrar</a></li>
-          </ul> -->
-
           <ul class="u-nav u-unstyled u-nav-1">
             <li id="userWelcome" class="u-nav-item hide">Olá, <span id="usernameDisplay"></span>!</li>
             <li id="accountLink" class="u-nav-item hide"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
@@ -107,7 +102,7 @@
       <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn"
         data-animation-duration="1500"> Treinos&nbsp;para todos os níveis</h2>
       <div class="u-expanded-width u-list u-list-1">
-        <div class="u-repeater u-repeater-1">
+        <div class="u-repeater u-repeater-1" id="plans">
           <div
             class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-1"
             data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">
@@ -120,8 +115,8 @@
                     data-animation-duration="1500" data-animation-delay="500">Crossfit</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-1" src="../images/346.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-1" src="../images/346.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-3"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -141,8 +136,8 @@
                     data-animation-duration="1500" data-animation-delay="500"> Combine activities</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-2" src="../images/hhhh.jpg"
-                data-image-width="1000" data-image-height="667">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-2" src="../images/hhhh.jpg"
+                data-image-width="1000" data-image-height="667"> -->
               <p class="u-text u-text-5"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -162,8 +157,8 @@
                     data-animation-duration="1500" data-animation-delay="500"> Boxing Classes</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-3" src="../images/vvv.jpg"
-                data-image-width="873" data-image-height="873">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-3" src="../images/vvv.jpg"
+                data-image-width="873" data-image-height="873"> -->
               <p class="u-text u-text-7"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -183,8 +178,8 @@
                     data-animation-duration="1500" data-animation-delay="500"> Personal Training</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-4" src="../images/gh.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-4" src="../images/gh.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-9"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -204,8 +199,8 @@
                     data-animation-duration="1500" data-animation-delay="500">Bodybuilding</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-5" src="../images/tr.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-5" src="../images/tr.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-11"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -225,8 +220,8 @@
                     data-animation-duration="1500" data-animation-delay="500"> Trx Training</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-6" src="../images/hhhh1.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-6" src="../images/hhhh1.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-13"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -246,8 +241,8 @@
                     data-animation-duration="1500" data-animation-delay="500">Rowing</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-7" src="../images/6.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-7" src="../images/6.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-15"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -267,8 +262,8 @@
                     data-animation-duration="1500" data-animation-delay="500">Barbell Club</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-8" src="../images/577.jpg"
-                data-image-width="1380" data-image-height="920">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-8" src="../images/577.jpg"
+                data-image-width="1380" data-image-height="920"> -->
               <p class="u-text u-text-17"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -288,8 +283,8 @@
                     data-animation-duration="1500" data-animation-delay="500"> Additional Classes</h4>
                 </div>
               </div>
-              <img alt="" class="u-expanded-width u-image u-image-default u-image-9" src="../images/t4.jpg"
-                data-image-width="885" data-image-height="801">
+              <!-- <img alt="" class="u-expanded-width u-image u-image-default u-image-9" src="../images/t4.jpg"
+                data-image-width="885" data-image-height="801"> -->
               <p class="u-text u-text-19"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
                 eu fugiat nulla pariatur. </p>
               <a href="#"
@@ -313,7 +308,7 @@
       <h3 class="u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn"
         data-animation-duration="1500"> Instagram <a href="https://www.instagram.com/sejaprimefit"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-white u-text-hover-white u-text-palette-2-base u-btn-1"
-          target="_blank">@sejaprimefitb</a>
+          target="_blank">@sejaprimefit</a>
       </h3>
 
     </div>
