Corrigir tela de registro
temp

--- a/pages/login.html
+++ b/pages/login.html
@@ -20,7 +20,7 @@
         <div class="form-container">
             <form id="loginForm" class="form">
                 <div class="input-group">
-                    <input type="text" id="loginUsername" placeholder="Usuário" required>
+                    <input type="text" id="loginUsername" placeholder="E-mail" required>
                 </div>
                 <div class="input-group">
                     <input type="password" id="loginPassword" placeholder="Senha" required>
