Corrigir bugs na tela inicial

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
 
     .u-logo-text {
       font-family: 'Poppins', sans-serif;
-      font-size: 36px; /* Aumenta o tamanho do logo */
+      font-size: 24px; /* Aumenta o tamanho do logo */
       font-weight: 700; /* Deixa o texto mais destacado */
       color: #000; /* Preto */
       display: inline-block; /* Mantém o alinhamento */
@@ -89,7 +89,7 @@
         </div>
         <div class="u-nav-container">
           <ul class="u-nav u-unstyled u-nav-1">
-            <li id="userWelcome" class="u-nav-item hide">Olá, <span id="usernameDisplay"></span>!</li>
+            <li id="userWelcome" class="u-nav-item hide">Olá <span id="usernameDisplay"></span>!</li>
             <li id="accountLink" class="u-nav-item hide"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
             <li id="logoutLink" class="u-nav-item hide"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">Sair</a></li>
             <li id="loginLink" class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="login.html" style="padding: 10px 20px;">Entrar</a></li>
